[gd_scene load_steps=4 format=3 uid="uid://8bbjqr0arqai"]

[ext_resource type="Script" path="res://Utilities/Inventory/InventorySlot.gd" id="1_kdakn"]
[ext_resource type="Texture2D" uid="uid://bxdqcuufg7s8c" path="res://PlaceholdersDeleteMe/PurpSquare.png" id="2_rlpej"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ydirq"]

[node name="InventorySlot" type="PanelContainer"]
custom_minimum_size = Vector2(90, 90)
offset_left = 10.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 160.0
script = ExtResource("1_kdakn")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="SpotTexture" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_rlpej")
expand_mode = 1
stretch_mode = 5

[node name="ItemQuantity" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 36

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 2
color = Color(0, 0.685708, 0.685883, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UsagePanel"]
layout_mode = 0
offset_left = -1.0
offset_top = 50.0
offset_right = 149.0
offset_bottom = 108.0
alignment = 1

[node name="UseButton" type="Button" parent="UsagePanel/VBoxContainer"]
layout_mode = 2
text = "Use"

[node name="DropButton" type="Button" parent="UsagePanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Drop"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_ydirq")

[connection signal="pressed" from="UsagePanel/VBoxContainer/DropButton" to="." method="_on_drop_button_pressed"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
